--- a/Peer Assignment 1/PA1_template.html
+++ b/Peer Assignment 1/PA1_template.html
@@ -76,7 +76,8 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <h3>Loading and preprocessing the data</h3>
 <p>1. Load the data into R</p>
 <pre class="r"><code>activity_all &lt;- read.csv(&quot;activity.csv&quot;)</code></pre>
-<p>2. Process/transform the data (if necessary) into a format suitable for your analysis Not done at this step</p>
+<p>2. Process/transform the data (if necessary) into a format suitable for your analysis</p>
+<p>Not done at this step</p>
 <hr />
 </div>
 <div id="what-is-mean-total-number-of-steps-taken-per-day" class="section level3">
